--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ branches:
 before_script:
   - npm install -g @angular/cli
 script:
+- ng link
 - ng build --prod --base-href https://github.com/MichalSlatala/test-automation-workshops
 - ng test
