--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ before_script:
   - npm install -g @angular/cli
 script:
 - ng lint
+- ng test --watch=false --browsers=ChromeHeadless
+- ng e2e
 - ng build --prod --base-href https://github.com/MichalSlatala/test-automation-workshops
-- ng test
